# DevContainerBase

./: README.md  pyproject.toml  requirements.txt  venv_prefix.py
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: post-create.sh
.devcontainer/zsh/: .p10k.zsh
src/app/: database.py  main.py  routes.py  schemas.py
tests/: test_main.py
