[project]
name = "DevContainerBase"
version = "0.1.0"
description = "A base development container setup."
authors = [
    { name = "Paolo Prenassi", email = "prenassipaolo@gmail.com" },
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "pydantic>=2.12.5",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "black>=25.12.0",
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
    "httpx>=0.28.1",
]

[tool.ruff]
line-length = 88
src = ["src", "tests"]
target-version = "py312"

[tool.pytest.ini_options]
pythonpath = ["src"]

